//
// Created by laptop on 5/31/22.
//

#pragma once

enum class SimpleInstallationPackageFileType {
    PARTIALLY_DOWNLOADED,
    MISSING_LOCALLY_INSTALLED_PACKAGE
};